--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "babel-node index.js"
   },
   "bin": {
-    "babel-ready": "./bin/babel-ready.js"
+    "babel-ready": "./bin/TypeScript-Ready.js"
   },
   "author": "",
   "repository": {
